--- a/templates/celery_systemd.conf.j2
+++ b/templates/celery_systemd.conf.j2
@@ -1,6 +1,6 @@
 # Name of nodes to start
 # here we have a single node
-CELERYD_NODES="{% for node in celery_nodes %}{{ node }}{{ " " if not loop.last }}{% endfor %}"
+CELERYD_NODES="{% for node in celery_nodes %}{% if not loop.last %}{{ node }} {% else %}{{ node }}{% endif %}{% endfor %}"
 # or we could have three nodes:
 #CELERYD_NODES="w1 w2 w3"
 
