defined default vars for celery service paths; changed paths accordingly;

--- a/templates/celery_systemd.service.j2
+++ b/templates/celery_systemd.service.j2
@@ -6,7 +6,7 @@ After=network.target
 Type=forking
 User={{ celery_user }}
 Group={{ celery_user_group }}
-EnvironmentFile=/lib/systemd/system/celery.service.d/celery-systemd.conf
+EnvironmentFile={{ celery_systemd_conf_file }}
 WorkingDirectory=/opt/celery
 ExecStart=/bin/sh -c '${CELERY_BIN} multi start ${CELERYD_NODES} \
   -A ${CELERY_APP} --pidfile=${CELERYD_PID_FILE} \
