added var `celery_working_dir`; added task to ensure that `celery_working_dir` exists; added `celery_working_dir` to the `celery_systemd.service` template.

--- a/templates/celery_systemd.service.j2
+++ b/templates/celery_systemd.service.j2
@@ -7,7 +7,7 @@ Type=forking
 User={{ celery_user }}
 Group={{ celery_user_group }}
 EnvironmentFile={{ celery_systemd_conf_file }}
-WorkingDirectory=/opt/celery
+WorkingDirectory={{ celery_working_dir }}
 ExecStart=/bin/sh -c '${CELERY_BIN} multi start ${CELERYD_NODES} \
   -A ${CELERY_APP} --pidfile=${CELERYD_PID_FILE} \
   --logfile=${CELERYD_LOG_FILE} --loglevel=${CELERYD_LOG_LEVEL} ${CELERYD_OPTS}'
